<resources>
    <string name="app_name" translatable="false">Herfor</string>
    <string name="default_notification_channel_id" translatable="false">herfor-notifications</string>
    <string name="geocoder_error">Connection error</string>
    <string name="geocoder_unknown">Unknown location</string>
    <string name="report_submit_error">Could not send the report. Try again.</string>
    <string name="settings_button">Settings</string>
    <string name="location_explanation">Location is needed to report incidents and see location on the map.</string>
    <string name="time_details_description">Added %s</string>
    <string name="connection_loss_explanation">We have lost access to the internet.</string>
    <string name="reload">Reload</string>
    <string name="channel_name">Incident notifications</string>
    <string name="channel_description">Receive notifications about incidents around you.</string>
    <string name="filter_sheet_title">Filter on the map and in notifications</string>
    <string name="green">Green</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="bus">Bus</string>
    <string name="tram">Tram</string>
    <string name="metro">Metro</string>
    <string name="train">Train</string>
    <string name="bike">Bike</string>
    <string name="pedestrian">Pedestrian</string>
    <string name="add">Add</string>
    <string name="placeholder" translatable="false">...</string>
    <string name="title_activity_maps" translatable="false">Herfor</string>
    <string name="none_severity">Elapsed</string>
    <string name="distance_string">%d m away from you</string>
    <string name="report_notification_unavailable">The report is not available or it elapsed.</string>
    <string name="add_sheet_title">Add a report</string>
    <string name="details_sheet_clock_content_description">Report time</string>
    <string name="location_unavailable_error">Your location is currently unavailable.</string>
    <string name="relevant_button_string">Relevant</string>
    <string name="irrelevant_button_string">Not relevant</string>
    <string name="grade_error_toast">Could not grade the report. Try again later.</string>
    <string name="grade_thanks_toast">Thanks for your input - you\'re making this service more accurate.</string>
    <string name="silent_zones_header">Set up and manage silent zones</string>
    <string name="silent_zone_initial">Tap to set up</string>
    <string name="silent_zones_set">%s - tap to remove</string>
    <string name="privacy_policy">
        As you’re using this app, you will provide it with some data. In this document, you will find out what sort of data will be used and how.\n
        Location\n
        We use location to show you where you are on the map, to let you send reports (which are linked to your location at the moment of sending the report) and to show you notifications about relevant reports nearby. We try to take the least data we can: we will know someone asked to see reports from a given area visible on the map and that someone sent a report regarding a given location. We don’t send your current location to our servers unless you provide it explicitly. Decision on whether to show you a notification is made on the device.\n
        Activity recognition\n
        We use Activity Recognition API provided by Google Play Services to show you more relevant notifications by determining whether to show reports from a wider area. We don’t send this information to our servers - the decision is made on the device.\n
        Notifications\n
        We use Firebase Cloud Messaging from Google to show you notifications. Messages from this service are sent to all devices, with decision on whether to show you one made on the device.\n
        Note on external services\n
        We extensively use application programming interfaces (also known as APIs) from companies that have their own privacy policies. We do not have full control over data that is used by these APIs, however its usage should be uniform regardless of an app that uses these APIs.
    </string>
    <string name="privacy_policy_button">Privacy policy</string>
    <string name="silent_zone_error">Silent zone could not be registered. Try again later.</string>
</resources>
